--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
       <artifactId>gson</artifactId>
       <version>2.10.1</version>
     </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -42,4 +43,15 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <!-- Added for testing from Maven -->
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
