--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>MyShelfie</name>
-  <url>http://maven.apache.org</url>
+  <url>https://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -44,9 +44,12 @@
     </dependency>
   </dependencies>
 
-  <!-- Added for testing from Maven -->
   <build>
+    <!-- Setting the directory in which all TestFile will be putted -->
+    <!-- Uncomment to change <testSourceDirectory>src/test<testSourceDirectory> -->
+
     <plugins>
+      <!-- For testing from Maven all classes at once -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
