--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.10.1</version>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
