Added JColor dependency and modified TUI

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,15 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.diogonunes/JColor
+        JColor for CLI interface-->
+        <dependency>
+            <groupId>com.diogonunes</groupId>
+            <artifactId>JColor</artifactId>
+            <version>5.5.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
